<resources>

    <string name="app_name">Flashlight+</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="blink_frequency_default" translatable="false">0</string>

    <string name="text_about"> <b>Created by Ioannis Mittas</b>\n\n
        <b>NumberPicker:</b>\n
        Copyright © 2016 ShawnLin013(Shawn Lin)\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n\n

        <b>Power button:</b>\n
        "https://365psd.com/day/3-200/", by Vova-Devyatkin\n\n

        Feature graphic photo by: Adrian Mascenon / Instagram @adrianmascenon\n\n

        Thanks to: https://icons8.com
    </string>

    <!-- Notifications -->
    <string name="channel_name">Flashlight</string>
    <string name="channel_description">Flashlight notification.</string>
    <string name="notification_title">@string/app_name</string>
    <string name="notification_message">Open Flashlight</string>

    <!-- Preferences -->
    <string name="pref_background_mode_label">Background mode</string>
    <string name="pref_background_mode_summary">Flashlight will keep running after exiting the app</string>
    <string name="pref_background_mode_key" translatable="false">background_mode</string>
    <string name="pref_background_mode_default" translatable="false">true</string>

    <string name="pref_startup_light_label">Light on startup</string>
    <string name="pref_startup_light_summary">Enable flashlight when starting the app</string>
    <string name="pref_startup_light_key" translatable="false">startup_light</string>
    <string name="pref_startup_light_default" translatable="false">true</string>

    <string name="pref_rate_label">Rate us!</string>
    <string name="pref_rate_summary">Because we showed you the light :)</string>
    <string name="pref_rate_key" translatable="false">rate</string>

    <string name="pref_about_label">About</string>
    <string name="pref_about_key" translatable="false">about</string>

    <string name="pref_remove_ads_label">Remove ads</string>
    <string name="pref_remove_ads_key" translatable="false">removeAds</string>


</resources>
