<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@string/pref_background_mode_default"
        android:key="@string/pref_background_mode_key"
        android:summary="@string/pref_background_mode_summary"
        android:title="@string/pref_background_mode_label"
        />

    <CheckBoxPreference
        android:defaultValue="@string/pref_startup_light_default"
        android:key="@string/pref_startup_light_key"
        android:summary="@string/pref_startup_light_summary"
        android:title="@string/pref_startup_light_label"
        />

    <Preference
        android:key="@string/pref_remove_ads_key"
        android:title="@string/pref_remove_ads_label"
        android:layout="@layout/preference_button_remove_ads"
        />

    <Preference
        android:key="@string/pref_rate_key"
        android:title="@string/pref_rate_label"
        android:summary="@string/pref_rate_summary"
        />

    <Preference
        android:key="@string/pref_about_key"
        android:title="@string/pref_about_label"
        />

</PreferenceScreen>